jpeg: Fix reading orientation EXIF tag for some photos

Some cameras don't use the right data-type to store the EXIF Orientation
tag. GIMP still knows how to process it, and it seems common enough that
we should handle it.

https://bugzilla.gnome.org/show_bug.cgi?id=725582